(library
 (name ping_pong)
 (modules ping_pong)
 (libraries rresult conduit ke bigstringaf fmt result mirage-crypto-rng.unix
   ssl))

(executable
 (name with_lwt)
 (modules with_lwt)
 (libraries ping_pong conduit-lwt conduit-lwt-tls conduit-lwt-ssl))

(executable
 (name with_async)
 (modules with_async)
 (libraries stdlib-shims ping_pong mirage-crypto-rng.unix conduit-async
   conduit-async-tls conduit-async-ssl))

(executable
 (name test_lwt)
 (modules test_lwt)
 (libraries unix))

(rule
 (alias runtest)
 (package conduit-lwt)
 (deps
  (:test test_lwt.exe)
  with_tls.exe
  server.pem
  server.key
  client0
  client1
  client2)
 (action
  (run %{test})))

(executable
 (name test_async)
 (modules test_async)
 (libraries unix))

(rule
 (alias runtest)
 (package conduit-async)
 (deps
  (:test test_async.exe)
  with_async.exe
  server.pem
  server.key
  client0
  client1
  client2)
 (action
  (run %{test})))
